--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 ext {
     koin_version = "3.2.1"
+    retrofit_version = "2.9.0"
 }
 
 dependencies {
@@ -45,6 +46,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     // DI
     implementation "io.insert-koin:koin-android:$koin_version"
+    // Network
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test:$koin_version"
